@@ -1,5 +1,5 @@
 #!/bin/sh
 echo 'number of files'
-find ../../ctrl ../../data ../../gui ../../main ../../pencil ../../io ../../test_fw ../../u8stream ../../u8buf -name '*.c' -o -name '*.inl' -o -name '*.h' | wc
+find ../../ctrl ../../data ../../gui ../../main ../../pencil ../../io ../../test_fw ../../u8stream -name '*.c' -o -name '*.inl' -o -name '*.h' | wc
 echo 'number of lines'
-find ../../ctrl ../../data ../../gui ../../main ../../pencil ../../io ../../test_fw ../../u8stream ../../u8buf -name '*.c' -o -name '*.inl' -o -name '*.h' | sort | xargs wc
+find ../../ctrl ../../data ../../gui ../../main ../../pencil ../../io ../../test_fw ../../u8stream -name '*.c' -o -name '*.inl' -o -name '*.h' | sort | xargs wc
