@@ -10716,7 +10716,7 @@
         [
           {
             "id": 74,
-            "main_type": 2,
+            "main_type": 6,
             "type": "Port",
             "key": "clipboard in",
             "value": "IF",
@@ -10728,7 +10728,7 @@
           },
           {
             "id": 75,
-            "main_type": 2,
+            "main_type": 7,
             "type": "Port",
             "key": "file output",
             "value": "IF",
@@ -10740,7 +10740,7 @@
           },
           {
             "id": 85,
-            "main_type": 2,
+            "main_type": 6,
             "type": "Port",
             "key": "export_trigger",
             "description": [
@@ -10751,7 +10751,7 @@
           },
           {
             "id": 95,
-            "main_type": 2,
+            "main_type": 6,
             "type": "Port",
             "key": "file input",
             "value": "IF",
@@ -10763,7 +10763,7 @@
           },
           {
             "id": 96,
-            "main_type": 2,
+            "main_type": 7,
             "type": "Port",
             "key": "clipboard out",
             "value": "IF",
@@ -20805,7 +20805,7 @@
         "description": [
                 ""
         ],
-        "list_order": 774017640,
+        "list_order": 936267276,
         "from_classifier_name": "ctrl_ diagram_ trigger",
         "from_feature_key": "",
         "to_classifier_name": "consis tency_ lifeline",
@@ -20879,7 +20879,7 @@
         "description": [
                 ""
         ],
-        "list_order": 464297958,
+        "list_order": 261099497,
         "from_classifier_name": "ctrl_ classifier_ controller",
         "from_feature_key": "",
         "to_classifier_name": "consis tency_ lifeline",
@@ -20898,7 +20898,7 @@
         "description": [
                 ""
         ],
-        "list_order": 1021793385,
+        "list_order": 1168248000,
         "from_classifier_name": "ctrl_ classifier_ controller",
         "from_feature_key": "",
         "to_classifier_name": "consis tency_ lifeline",
@@ -20953,7 +20953,7 @@
         "description": [
                 ""
         ],
-        "list_order": 36321671,
+        "list_order": 49893167,
         "from_classifier_name": "ctrl_ diagram_ controller",
         "from_feature_key": "",
         "to_classifier_name": "consis tency_ lifeline",
@@ -20991,7 +20991,7 @@
         "description": [
                 ""
         ],
-        "list_order": 1320250533,
+        "list_order": 1441777510,
         "from_classifier_name": "ctrl_ diagram_ controller",
         "from_feature_key": "",
         "to_classifier_name": "consis tency_ lifeline",
@@ -21046,7 +21046,7 @@
         "description": [
                 ""
         ],
-        "list_order": 374197687,
+        "list_order": 188389121,
         "from_classifier_name": "ctrl_ classifier_ trigger",
         "from_feature_key": "",
         "to_classifier_name": "ctrl_ classifier_ controller",
@@ -27902,7 +27902,7 @@
         "description": [
                 ""
         ],
-        "list_order": -149510138,
+        "list_order": -171700361,
         "from_classifier_name": "consis tency_ lifeline",
         "from_feature_key": "",
         "to_classifier_name": "ctrl_ diagram_ controller",
@@ -27921,7 +27921,7 @@
         "description": [
                 ""
         ],
-        "list_order": 284097416,
+        "list_order": 112216346,
         "from_classifier_name": "consis tency_ lifeline",
         "from_feature_key": "",
         "to_classifier_name": "ctrl_ classifier_ trigger",
@@ -27940,7 +27940,7 @@
         "description": [
                 ""
         ],
-        "list_order": 554398229,
+        "list_order": 344197070,
         "from_classifier_name": "consis tency_ lifeline",
         "from_feature_key": "",
         "to_classifier_name": "ctrl_ diagram_ trigger",
@@ -27959,7 +27959,7 @@
         "description": [
                 ""
         ],
-        "list_order": 920430580,
+        "list_order": 1085150427,
         "from_classifier_name": "consis tency_ lifeline",
         "from_feature_key": "",
         "to_classifier_name": "ctrl_ classifier_ controller",
@@ -27978,7 +27978,7 @@
         "description": [
                 ""
         ],
-        "list_order": 1218887728,
+        "list_order": 1362142336,
         "from_classifier_name": "consis tency_ lifeline",
         "from_feature_key": "",
         "to_classifier_name": "ctrl_ diagram_ controller",
